prepared for integration